# Django-e-Mongo

./: README.md  manage.py  pyproject.toml  pytest.ini
DjangoMongo/: asgi.py  settings.py  urls.py  wsgi.py
DjangoMongo/core/: models.py  router.py  views.py
DjangoMongo/core/models/: __init__.py  task.py
DjangoMongo/core/serializers/: __init__.py  task.py
DjangoMongo/core/views/: __init__.py  task.py
tests/: conftest.py
tests/integration/: test_task.py
